add Recipe DAO and corrected some minor mistakes in Recipe entity